--- a/html/night_market/night_market.css
+++ b/html/night_market/night_market.css
@@ -1,6 +1,6 @@
 @import url(../navbar.css);
 @import url(../footer.css);
-
+@import url(../aside.css);
 *{
   box-sizing: border-box;
   /* outline: 1px solid red; */
