--- a/html/custom/custom.css
+++ b/html/custom/custom.css
@@ -117,6 +117,7 @@ article.next > div.background{
   background-color: hsla(0deg, 0%, 100%, .75);
   height: 540px;
   margin-top: 19px;
+  width: 960px;
   
 }
 
