--- a/html/mountain/mountain.css
+++ b/html/mountain/mountain.css
@@ -9,6 +9,9 @@
   
 }
 
+body{
+  background-color: hsla(193deg, 100%, 96%, 100);
+}
 div.banner{
   margin: 0 auto;
   background-image: url("./images/banner.png");
