--- a/html/recommend/recommend.css
+++ b/html/recommend/recommend.css
@@ -1,5 +1,9 @@
 @import url("../aside.css");
 
+body{
+  background-color: hsla(193deg, 100%, 96%, 100);
+}
+
 div.banner{
   margin: 0 auto;
   background-image: url("./images/banner.png");
