--- a/html/store/store.css
+++ b/html/store/store.css
@@ -5,7 +5,9 @@
   box-sizing: border-box;
   font-family: 'Noto Sans';
 }
-
+body{
+  background-color: hsla(193deg, 100%, 96%, 100);
+}
 nav.navbar > p{
   font-size: 14px;
   position: absolute;
