--- a/html/index/index.css
+++ b/html/index/index.css
@@ -9,9 +9,9 @@
   color: hsla(0deg, 2%, 33%, 100);
   font-family: 'Noto Sans';
 }
-/* body{
+body{
   background-color: hsla(193deg, 100%, 96%, 100);
-} */ 
+}
 
 /* ---------------輪播 ----------------------*/
 header{
