--- a/html/recommend/recommend.css
+++ b/html/recommend/recommend.css
@@ -1,8 +1,8 @@
 @import url("../aside.css");
 
-/* body{
+body{
   background-color: hsla(193deg, 100%, 96%, 100);
-} */
+}
 
 div.banner{
   margin: 0 auto;
