--- a/html/master/master.css
+++ b/html/master/master.css
@@ -7,29 +7,33 @@ body{
 
 div.banner{
   margin: 0 auto;
-  background-image: url("./images/banner.jpg");
+  background-image: url("./images/banner.png");
   background-repeat: no-repeat;
   background-size: cover;
-  width: 1200px;
-  height: 320px;
+  position: relative;
+  width: 100%;
+  min-width: 1200px;
+  height: 400px;
 }
 main.main{
   padding-top: 100px;
-  /* padding-bottom: 80px; */
-  /* border: 1px solid hsla(193deg, 100%, 96%, 1);  */
-  width: 1200px;
+  width: 100%;
+  min-width: 1200px;
   margin: 0 auto;
   position: relative;
   background-color: hsla(193deg, 100%, 96%, 100);
   }
 
 article.frist{
-  padding-left: 70px;
+  width: 1000px;
+  margin: 0 auto;
   position: relative;
 }
 article.frist > img{
   display: inline-block;
   vertical-align: bottom;
+  position: relative;
+  left: -70px;
   
 }
 article.frist p{
@@ -85,17 +89,28 @@ div.background img:nth-child(4){
 }
 /* ----------------------第三區------------------ */
 article.three{
+  border: 1px solid red;
   margin-top: 72px;
-  position: relative;
+  /* position: relative; */
   font-size: 0;
+  z-index: 2;
 }
-article.three > img:nth-child(1){
-  margin-left: 66px;
-  vertical-align: top;
+div.middle{
+  z-index: 100;
+  margin: 0 auto;
 }
-
+.block_3_1{
+  margin-right: 50px;
+  margin-bottom: 50px;
+  z-index: 100;
+}
+article.three  img.back{
+  position: absolute;
+  left: 0;
+  top: 2300px;
+  z-index: 0;
+}
 article.three > img:nth-child(2){
-  margin-left: 50px;
   margin: 70px 0px 0px 50px;
 }
 
@@ -105,11 +120,7 @@ article.three p{
   margin: 0 auto;
   padding-top: 55px;
 }
-article.three > img.back{
-  position: absolute;
-  left: 0;
-  top: 168px;
-}
+
 /* ----------------------第四區------------------ */
 article.four{
   margin-top: 120px;
@@ -117,7 +128,7 @@ article.four{
   font-size: 0;
 }
 article.four img:nth-child(1){
-    margin: 0px 20px 0px 100px;
+  margin: 0px 35px 0px 0px;
 }
 
 article.four p{
@@ -126,12 +137,13 @@ article.four p{
 article.four p.one{
   width: fit-content;
   margin: 0 auto;
-  padding: 80px 0px 180px 0px;
+  padding: 80px 0px 120px 0px;
 }
 
 article.four img:nth-child(4){
   display: inline-block;
   vertical-align: top;
+  z-index: 10;
   margin: 0px 0px 120px 100px;
 }
 
@@ -140,11 +152,18 @@ article.four p.two{
   height: 76px;
   margin: 0 auto;
   display: inline-block;
-  margin: 150px 0px 0px 35px;
 }
 
 article.four img.back{
   position: absolute;
   right: 0;
   bottom: 120px;
+}
+div.middle_1{
+  margin: 0 auto;
+  z-index: 100;
+}
+#img{
+  vertical-align: middle;
+  margin-bottom: 120px;
 }
