--- a/html/navbar.css
+++ b/html/navbar.css
@@ -9,7 +9,8 @@
 
 
 nav.navbar{
-  width: 1200px;
+  width: 100%;
+  min-width: 1200px;
   height: 90px; 
   margin: 0 auto;
   background-color: hsla(193deg, 100%, 96%, 100);
@@ -17,26 +18,27 @@ nav.navbar{
   position: sticky;
   top: 0;
   left: 0;
-  /* height: 70px; */
 }
 
 nav.navbar > a img.logo{
   border-radius: 50%;
   width: 130px;
   position: absolute;
-  left: 60px;
+  left: 80px;
   top: 20px;
   z-index: 100;
 }
 
 nav.navbar > a img.logo2{
-  margin-top: 5px;
-  margin-left: 397px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
 }
 
 nav.navbar > div.img{
   position: absolute;
-  right: 60px;
+  right: 80px;
   top: 30px;
 }
 
@@ -47,7 +49,7 @@ nav.navbar > div.img:hover{
 nav.navbar > p{
   font-size: 14px;
   position: absolute;
-  left: 860px;
+  left: 75%;
   top: 35px;
 }
 
@@ -55,13 +57,25 @@ nav.navbar > p{
 
 div.banner > p{
   color: hsla(0deg, 0%, 100%, 81%);
-  background-color: hsla(0deg, 4%, 69%, 63%);
-  /* border: 1px solid white; */
   border-radius: 5px;
   width: max-content;
   font-size: 30px;
   padding: 3px 15px;
-  position: relative;
-  top: 134px;
-  left: 520px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  backdrop-filter: blur(5px); 
+} 
+div.bread{
+  width: 100%;
+  min-width: 1200px;
+  background-color: hsla(160deg, 52%, 40%, 15%);
+  height: 30px;
+}
+div.bread a{
+  line-height: 30px;
+}
+div.bread a:first-child{
+  padding-left: 80px;
 }
