--- a/html/store/store.css
+++ b/html/store/store.css
@@ -1,26 +1,26 @@
 @import url("../aside.css");
+@import url(../navbar.css);
+@import url(../footer.css);
 @import url(../../js/slick-1.8.1/slick/slick.css);
 @import url(../../js/slick-1.8.1/slick/slick-theme.css);
 *{
   box-sizing: border-box;
   font-family: 'Noto Sans';
 }
-/* body{
+body{
   background-color: hsla(193deg, 100%, 96%, 100);
-} */
-nav.navbar > p{
-  font-size: 14px;
-  position: absolute;
-  left: 910px !important;
-  top: 35px;
 }
+
 
 div.banner{
   margin: 0 auto;
   background-image: url("./image/banner-1.jpg");
   background-repeat: no-repeat;
-  width: 1200px;
-  height: 320px;
+  background-size: cover;
+  width: 100%;
+  min-width: 1200px;
+  height: 400px;
+  position: relative;
 }
 p.sol{
   width: 1200px;
@@ -28,6 +28,7 @@ p.sol{
   text-align: center;
   font-size: 24px;
   color: hsla(0deg, 2%, 33%, 100);
+  
 }
 main.main{
   border: 1px solid hsla(193deg, 100%, 96%, 100);
