--- a/navbar/navbar.css
+++ b/navbar/navbar.css
@@ -8,11 +8,12 @@
 }
 
 nav.navbar{
-  border: 1px solid black;
-  width: 1200px;
+  border: 10px solid black;
+  min-width: 1200px;
   height: 103px;
   margin: 0 auto;
   position: relative;
+  border: 1px solid black;
 }
 
 nav.navbar > a img.logo{
@@ -35,7 +36,8 @@ nav.navbar > div.img{
 
 nav.navbar > p{
   font-size: 14px;
-  position: absolute;
+  /* position: absolute;
   left: 860px;
-  top: 40px;
+  top: 40px;  */
+  margin-left: 1200px;
 }
