--- a/html/footer.css
+++ b/html/footer.css
@@ -70,3 +70,244 @@ div.footer > div.tiba{
   right: 60px;
   bottom: 31px;
 }
+/* ---------------rwd---------- */
+@media (max-width: 575.98px) {
+  div.footer{
+    margin: 0 auto;
+    min-width: 100%;
+    height: 380px;
+    background-color: hsla(0deg, 0%, 59%, .30);
+    position: relative;
+    padding-left: 200px;
+  }
+  
+  div.footer > div.index{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: baseline;
+    width: 75px;
+    height: 145px;
+    font-size: 12px;
+    justify-content: space-between;
+    position: absolute;
+    padding-right: 20px;
+    left: 20px;
+    top: 25px;
+  }
+  div.footer > div.slogan > p.h1{
+    margin: 0;
+    font-size: 14px;
+    width: 156px;
+    height: 20px;
+    position: absolute;
+    left: 30%;
+    top: 23px;
+  }
+  div.slogan a{
+    display: block;
+    width: 14px;
+    height: 14px;
+  }
+  div.slogan > p.local{
+    width: 200px;
+    font-size: 12px;
+    position: absolute;
+    left: 30%;
+    top: 57px;
+  }
+  div.slogan > p.copy{
+    font-size: 12px;
+    position: absolute;
+    left: 25%;
+    top: 140px;
+  }
+  div.footer > div.tiba{
+    
+    font-size: 12px;
+    position: absolute;
+    width: 300px;
+    left: 20%;
+    top: 230px;
+  }
+}
+@media (min-width:576px) and (max-width: 767.98px){
+  div.footer{
+    margin: 0 auto;
+    min-width: 100%;
+    height: 300px;
+    background-color: hsla(0deg, 0%, 59%, .30);
+    position: relative;
+    padding-left: 200px;
+  }
+  
+  div.footer > div.index{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: baseline;
+    width: 75px;
+    height: 145px;
+    font-size: 12px;
+    justify-content: space-between;
+    position: absolute;
+    padding-right: 20px;
+    left: 20px;
+    top: 25px;
+  }
+  div.footer > div.slogan > p.h1{
+    margin: 0;
+    font-size: 14px;
+    width: 156px;
+    height: 20px;
+    position: absolute;
+    left: 30%;
+    top: 23px;
+  }
+  div.slogan a{
+    display: block;
+    width: 14px;
+    height: 14px;
+  }
+  div.slogan > p.local{
+    width: 200px;
+    font-size: 12px;
+    position: absolute;
+    left: 30%;
+    top: 57px;
+  }
+  div.slogan > p.copy{
+    font-size: 12px;
+    position: absolute;
+    left: 25%;
+    top: 140px;
+  }
+  div.footer > div.tiba{
+    font-size: 12px;
+    position: absolute;
+    right: 60px;
+    bottom: 40px;
+  }
+}
+@media (min-width:768px) and (max-width: 991.98px){
+  div.footer{
+    margin: 0 auto;
+    min-width: 100%;
+    height: 200px;
+    background-color: hsla(0deg, 0%, 59%, .30);
+    position: relative;
+    padding-left: 200px;
+  }
+  
+  div.footer > div.index{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: baseline;
+    width: 75px;
+    height: 145px;
+    font-size: 12px;
+    justify-content: space-between;
+    position: absolute;
+    padding-right: 20px;
+    left: 20px;
+    top: 25px;
+  }
+  div.footer > div.slogan > p.h1{
+    margin: 0;
+    font-size: 14px;
+    width: 156px;
+    height: 20px;
+    position: absolute;
+    left: 30%;
+    top: 23px;
+  }
+  div.slogan a{
+    display: block;
+    width: 14px;
+    height: 14px;
+  }
+  div.slogan > p.local{
+    width: 200px;
+    font-size: 12px;
+    position: absolute;
+    left: 30%;
+    top: 57px;
+  }
+  div.slogan > p.copy{
+    font-size: 12px;
+    position: absolute;
+    left: 25%;
+    top: 140px;
+  }
+  div.footer > div.tiba{
+    width: 200px;
+    font-size: 12px;
+    position: absolute;
+    right: 50px;
+    bottom: 40px;
+  }
+}
+
+@media (min-width:992px) and (max-width: 1199.98px){
+  div.footer{
+    margin: 0 auto;
+    min-width: 100%;
+    height: 200px;
+    background-color: hsla(0deg, 0%, 59%, .30);
+    position: relative;
+    padding-left: 200px;
+  }
+  
+  div.footer > div.index{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    align-items: baseline;
+    width: 75px;
+    height: 145px;
+    font-size: 12px;
+    justify-content: space-between;
+    position: absolute;
+    padding-right: 20px;
+    left: 20px;
+    top: 25px;
+  }
+  div.footer > div.slogan > p.h1{
+    margin: 0;
+    font-size: 14px;
+    width: 156px;
+    height: 20px;
+    position: absolute;
+    left: 25%;
+    top: 23px;
+  }
+  div.slogan a{
+    display: block;
+    width: 14px;
+    height: 14px;
+  }
+  div.slogan > p.local{
+    width: 200px;
+    font-size: 12px;
+    position: absolute;
+    left: 25%;
+    top: 57px;
+  }
+  div.slogan > p.copy{
+    font-size: 12px;
+    position: absolute;
+    left: 25%;
+    top: 140px;
+  }
+  div.footer > div.tiba{
+    width: 300px;
+    font-size: 12px;
+    position: absolute;
+    right: 50px;
+    bottom: 40px;
+  }
+}
+@media (min-width:768px) and (max-width: 991.98px){
+  
+}
