--- a/html/index/index.css
+++ b/html/index/index.css
@@ -1,26 +1,28 @@
 @import url(../navbar.css);
 @import url(../footer.css);
 @import url(../aside.css);
+@import url(./index_rwd.css);
 
-*{
+* {
   box-sizing: border-box;
   margin: 0;
-  text-decoration:none;
+  text-decoration: none;
   color: hsla(0deg, 2%, 33%, 100);
-  font-family: 'Noto Sans';
+  font-family: "Noto Sans";
+  /* outline: 1px solid red; */
 }
 
-@keyframes scroll{
-  0%{
+@keyframes scroll {
+  0% {
     transform: translateY(10px);
   }
-  100%{
+  100% {
     transform: translateY(20px);
   }
 }
 
 /* ---------------輪播 ----------------------*/
-header{
+header {
   width: 100%;
   min-width: 1200px;
   margin: 0 auto;
@@ -29,16 +31,14 @@ header{
   overflow: hidden;
 }
 
-div.slideshow{
+div.slideshow {
   margin: 0 auto;
   position: relative;
   overflow: hidden;
   height: 820px;
   width: 100%;
- 
 }
 @keyframes slide {
-    
   10% {
     opacity: 1;
   }
@@ -53,33 +53,29 @@ div.slideshow{
   50% {
     transform: scale(1.1);
   }
-  
 }
-img.turn{
-  /* width: 100%; */
+img.turn {
   position: absolute;
   top: 0;
   left: 0;
   object-fit: cover;
   animation: slide 15s infinite;
   opacity: 0;
-  /* overflow: hidden; */
 }
-img:nth-child(2){
-  animation-delay: 5s
-}
-      
-img:nth-child(3){
-  animation-delay: 10s
+img:nth-child(2) {
+  animation-delay: 5s;
 }
 
+img:nth-child(3) {
+  animation-delay: 10s;
+}
 
-img.scroll{
+img.scroll {
   position: absolute;
   bottom: 30px;
   left: 70px;
   z-index: 1;
-  opacity: .8;
+  opacity: 0.8;
   animation-name: scroll;
   animation-duration: 1.5s;
   animation-iteration-count: infinite;
@@ -88,165 +84,182 @@ img.scroll{
 
 /* -----------------滑動可視範圍------------ */
 
-main{
+main {
   width: 100%;
   min-width: 1200px;
   background-color: hsla(193deg, 100%, 96%, 100);
   margin: 0 auto;
 }
 
-
-main.main  div.scroll{
+main.main div.scroll {
   width: 100%;
   min-width: 1200px;
   height: 250px;
   background-image: url("./images/banner_2.jpg");
   background-repeat: no-repeat;
-  background-attachment: fixed; 
-  background-position: 0px 50px; 
+  background-attachment: fixed;
+  background-position: 0px 50px;
   background-size: 99.99%;
   margin-bottom: 85px;
 }
 
 /* --------------內容部分 ----------------*/
-article.content_1{
+
+article.content_1 {
   margin: 0 auto;
-  width: 1200px;
   font-size: 0;
   padding-bottom: 100px;
+  width: 70%;
   position: relative;
 }
 
-div.text{
+article.content_1 div.text {
   display: inline;
   vertical-align: top;
+  width: 700px;
 }
 
-div.text > p.title{
+div.text > p.title {
   display: inline-block;
   font-size: 30px;
-  padding-left: 433px;
+  padding-left: 350px;
   padding-bottom: 45px;
 }
-div.text > p.content{
+div.text > p.content {
   display: inline-block;
   font-size: 18px;
   width: 700px;
-  margin-left: 120px;
 }
-div.images_1{
-  margin-left: 100px;
-  display: inline-block;
+div.images_1 {
+  padding: 100px 200px 0px 0px;
   width: 250px;
-  margin-top: 50px;
-}
-div.rain{
   position: relative;
+}
+div.rain {
+  
   width: fit-content;
 }
-div.r_0,.r_1,.r_2,.r_3,.r_4,.r_5,.r_6{
+div.r_0,
+.r_1,
+.r_2,
+.r_3,
+.r_4,
+.r_5,
+.r_6 {
   position: absolute;
-  top: 145px;
+  top: 100px;
 }
 
-div.r_1,.r_3,.r_5{
+div.r_1,
+.r_3,
+.r_5 {
   animation-name: rain;
   animation-duration: 1s;
-  animation-iteration-count: 5;
+  animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
-div.r_2,.r_4,.r_6{
+div.r_2,
+.r_4,
+.r_6 {
   animation-name: rain;
   animation-duration: 1s;
-  animation-iteration-count: 5;
+  animation-iteration-count: infinite;
   animation-timing-function: linear;
   animation-delay: 0.5s;
 }
 @keyframes rain {
-  0%{ transform: translateY(0) translateX(0);      
+  0% {
+    transform: translateY(0) translateX(0);
   }
-  100%{
-    transform: translateY(10px) translateX(-5px); 
+  100% {
+    transform: translateY(10px) translateX(-5px);
   }
 }
-img.row{
+img.row {
   position: absolute;
   right: 0;
   bottom: 0;
 }
+.flex{
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+}
 /* -----------------海口味---------------- */
-article.content_2{
+article.content_2 {
   margin: 0 auto;
   width: 1200px;
   font-size: 0;
   position: relative;
 }
 
-div.text{
+div.text {
   display: inline;
   vertical-align: top;
 }
 
-article.content_2 > div.text > p.title{
+article.content_2 > div.text > p.title {
   display: inline-block;
   font-size: 30px;
   padding: 55px 0 45px 680px;
 }
 
-article.content_2 > div.text > p.content{
+article.content_2 > div.text > p.content {
   display: inline-block;
   font-size: 18px;
   width: 700px;
   margin-left: 390px;
 }
 
-div.images_2{
+div.images_2 {
   position: absolute;
   top: 185px;
   left: 120px;
   display: inline-block;
   width: 250px;
 }
-div.city{
+div.city {
   position: relative;
   width: fit-content;
 }
-div.c_0,.c_1,.c_2{
+div.c_0,
+.c_1,
+.c_2 {
   position: absolute;
   top: 10px;
 }
-div.c_1{
+div.c_1 {
   animation-name: city_water;
   animation-duration: 3s;
   animation-timing-function: steps(3);
-  animation-iteration-count: 3;
+  animation-iteration-count: infinite;
 }
-div.c_2{
+div.c_2 {
   animation-name: city_water_2;
   animation-duration: 3s;
   animation-timing-function: steps(3);
-  animation-iteration-count: 3;
+  animation-iteration-count: infinite;
 }
 
-@keyframes city_water{
-  0%{
+@keyframes city_water {
+  0% {
     transform: translateX(-3px);
   }
-  50%{
+  50% {
     transform: translateX(10px);
   }
 }
-@keyframes city_water_2{
-  0%{
+@keyframes city_water_2 {
+  0% {
     transform: translateX(3px);
   }
-  50%{
+  50% {
     transform: translateX(-10px);
   }
 }
 
 /* --------------開始基隆之旅 ----------*/
-article.start{
+article.start {
   margin: 100px 0px 100px 0px;
   background-image: url(./images/start.png);
   background-repeat: no-repeat;
@@ -256,50 +269,49 @@ article.start{
   height: 415px;
   position: relative;
 }
-article.start > p{
-border-radius: 5px;
-font-size: 30px;
-width: fit-content;
-color: white;
-background-color: hsla(0deg, 8%, 1%, .39);
-padding: 5px 10px;
-position: absolute;
-left: 50%;
-top: 50%;
-transform: translate(-50%, -40%);
+article.start > p {
+  border-radius: 5px;
+  font-size: 30px;
+  width: fit-content;
+  color: white;
+  background-color: hsla(0deg, 8%, 1%, 0.39);
+  padding: 5px 10px;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -40%);
 }
 
 /* ------------------主題景點-------------- */
-article.theme{
+article.theme {
   position: relative;
   margin: 0 auto;
   width: 100%;
-  min-width: 1200px;
+  /* min-width: 1200px; */
 }
-article.theme > div.icon{
+article.theme > div.icon {
   margin: 0 auto;
-  
 }
-div.background{
+div.background {
   margin-top: 40px;
-  background-color: hsla(160deg, 52%, 40%, .19);
+  background-color: hsla(160deg, 52%, 40%, 0.19);
   width: 350px;
   height: 350px;
   border-radius: 15px;
   position: relative;
   transform: translateX(-50px);
 }
-div.background > a{
+div.background > a {
   font-size: 24px;
   position: absolute;
   left: 200px;
   bottom: 20px;
 }
-div.block_2{
+div.block_2 {
   margin: 0 auto;
   width: 1200px;
 }
-div.background > img#left{
+div.background > img#left {
   position: absolute;
   left: 170px;
   bottom: 23px;
@@ -307,7 +319,7 @@ div.background > img#left{
   cursor: pointer;
 }
 
-div.background > img#right{
+div.background > img#right {
   position: absolute;
   left: 303px;
   bottom: 23px;
@@ -315,18 +327,19 @@ div.background > img#right{
   cursor: pointer;
 }
 
-div.images{
-  width: 1200px;
+div.images {
+  width: 100%;
+  max-width: 1200px;
   display: inline-flex;
   justify-content: space-between;
   position: absolute;
   top: 130px;
 }
-div.images  img.down{
+div.images img.down {
   transform: translateY(70px);
 }
 
-div.banner_3{
+div.banner_3 {
   margin-top: 100px;
   width: 100%;
   min-width: 1200px;
@@ -337,17 +350,18 @@ div.banner_3{
 }
 
 /* ----------------------------搭人分享 ---------------------*/
-div.pro{
+div.pro {
   margin: 0 auto;
   padding: 100px 0px 40px 0px;
 }
 
-article.proman{
+article.proman {
   border: 1px solid hsla(193deg, 100%, 96%, 100);
   position: relative;
+  overflow: hidden;
 }
 
-div.background_2{
+div.background_2 {
   padding-top: 100px;
   background-image: url(./icon/cycle_1.png);
   background-repeat: no-repeat;
@@ -356,9 +370,9 @@ div.background_2{
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 1;
+  z-index: 0;
 }
-div.background_3{
+div.background_3 {
   background-image: url(./icon/cycle_2.png);
   background-repeat: no-repeat;
   height: 380px;
@@ -366,21 +380,22 @@ div.background_3{
   position: absolute;
   right: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: 0;
 }
 
-div.grid{
+div.grid {
   margin: 0 auto;
   display: grid;
   grid-template-columns: auto auto auto;
   width: 960px;
-  padding: 20px 15px 20px ;
+  padding: 20px 15px 20px;
   margin-bottom: 82px;
+  z-index: 1;
 }
-div.grid_item{
+div.grid_item {
   font-size: 0;
   width: fit-content;
-  padding: 20px 15px 20px ;
+  padding: 20px 15px 20px;
   z-index: 1;
 }
 
