--- a/html/navbar.css
+++ b/html/navbar.css
@@ -1,17 +1,15 @@
-*{
+* {
   box-sizing: border-box;
   margin: 0;
-  text-decoration:none;
+  text-decoration: none;
   color: hsla(0deg, 2%, 33%, 100);
-  font-family: 'Noto Sans';
-  
+  font-family: "Noto Sans";
 }
 
-
-nav.navbar{
+nav.navbar {
   width: 100%;
   min-width: 1200px;
-  height: 90px; 
+  height: 90px;
   margin: 0 auto;
   background-color: hsla(193deg, 100%, 96%, 100);
   z-index: 2;
@@ -20,7 +18,7 @@ nav.navbar{
   left: 0;
 }
 
-nav.navbar > a img.logo{
+nav.navbar > a img.logo {
   border-radius: 50%;
   width: 130px;
   position: absolute;
@@ -29,33 +27,31 @@ nav.navbar > a img.logo{
   z-index: 100;
 }
 
-nav.navbar > a img.logo2{
+nav.navbar > a img.logo2 {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
 }
 
-nav.navbar > div.img{
+nav.navbar > div.img {
   position: absolute;
   right: 80px;
   top: 30px;
 }
 
-nav.navbar > div.img:hover{
+nav.navbar > div.img:hover {
   cursor: pointer;
 }
 
-nav.navbar > p{
+nav.navbar > p {
   font-size: 14px;
   position: absolute;
   left: 75%;
   top: 35px;
 }
 
-
-
-div.banner > p{
+div.banner > p {
   color: hsla(0deg, 0%, 100%, 81%);
   border-radius: 5px;
   width: max-content;
@@ -65,17 +61,217 @@ div.banner > p{
   top: 50%;
   left: 50%;
   transform: translateY(-50%) translateX(-50%);
-  backdrop-filter: blur(5px); 
-} 
-div.bread{
+  backdrop-filter: blur(5px);
+}
+/* -----------------rwd -----------------*/
+@media (max-width: 575.98px) {
+
+  nav.navbar {
+    min-width: 100%;
+    height: 50px;
+    margin: 0 auto;
+    background-color: hsla(193deg, 100%, 96%, 100);
+    z-index: 2;
+    position: sticky;
+    top: 0;
+    left: 0;
+  }
+  nav.navbar > a img.logo {
+    display: none;
+  }
+  nav.navbar > a img.logo2 {
+    width: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+  }
+  img.menu {
+    width: 30px;
+    height: 30xp;
+    position: absolute;
+    right: -50px;
+    top: -10px;
+  }
+}
+@media (min-width:576px) and (max-width: 767.98px){
+  nav.navbar {
+    min-width: 100%;
+    width: 100%;
+    height: 70px;
+    margin: 0 auto;
+    background-color: hsla(193deg, 100%, 96%, 100);
+    z-index: 2;
+    position: sticky;
+    top: 0;
+    left: 0;
+  }
+  nav.navbar > a img.logo {
+    display: none;
+  }
+  nav.navbar > a img.logo2 {
+    width: 55%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+  }
+  img.menu {
+    width: 40px;
+    height: 40xp;
+    position: absolute;
+    right: -50px;
+    top: -10px;
+  }
+}
+
+@media (min-width:768px) and (max-width: 991.98px){
+  nav.navbar {
+    width: 100%;
+    height: 70px;
+    margin: 0 auto;
+    background-color: hsla(193deg, 100%, 96%, 100);
+    z-index: 2;
+    position: sticky;
+    top: 0;
+    left: 0;
+  }
+  nav.navbar > a img.logo {
+    display: none;
+  }
+  nav.navbar > a img.logo2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+  }
+  nav.navbar > div.img {
+    position: absolute;
+    right: 80px;
+    top: 20px;
+  }
+}
+
+@media (min-width:992px) and (max-width: 1199.98px){
+  nav.navbar {
+    width: 100%;
+    height: 70px;
+    margin: 0 auto;
+    background-color: hsla(193deg, 100%, 96%, 100);
+    z-index: 2;
+    position: sticky;
+    top: 0;
+    left: 0;
+  }
+  nav.navbar > a img.logo {
+    display: none;
+  }
+  nav.navbar > a img.logo2 {
+    width: 50%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+  }
+  img.menu {
+    width: 40px;
+    height: 40xp;
+    position: absolute;
+    right: -50px;
+    top: -10px;
+  }
+}
+
+@media (min-width:768px) and (max-width: 991.98px){
+  nav.navbar {
+    min-width: 100%;
+    height: 70px;
+    margin: 0 auto;
+    background-color: hsla(193deg, 100%, 96%, 100);
+    z-index: 2;
+    position: sticky;
+    top: 0;
+    left: 0;
+  }
+  nav.navbar > a img.logo {
+    display: none;
+  }
+  nav.navbar > a img.logo2 {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+  }
+  nav.navbar > div.img {
+    position: absolute;
+    right: 80px;
+    top: 20px;
+  }
+}
+@media (min-width:992px) and (max-width: 1199.98px){
+  
+nav.navbar {
+  min-width: 100%;
   width: 100%;
-  min-width: 1200px;
-  background-color: hsla(160deg, 52%, 40%, 15%);
-  height: 30px;
+  height: 90px;
+  margin: 0 auto;
+  background-color: hsla(193deg, 100%, 96%, 100);
+  z-index: 2;
+  position: sticky;
+  top: 0;
+  left: 0;
 }
-div.bread a{
-  line-height: 30px;
+
+nav.navbar > a img.logo {
+  border-radius: 50%;
+  width: 130px;
+  position: absolute;
+  left: 80px;
+  top: 20px;
+  z-index: 100;
+  display: block;
 }
-div.bread a:first-child{
-  padding-left: 80px;
+
+nav.navbar > a img.logo2 {
+  width: 33%;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+}
+
+nav.navbar > div.img {
+  position: absolute;
+  right: 80px;
+  top: 30px;
+}
+
+nav.navbar > div.img:hover {
+  cursor: pointer;
+}
+
+nav.navbar > p {
+  font-size: 14px;
+  position: absolute;
+  left: 75%;
+  top: 35px;
+}
+
+div.banner > p {
+  color: hsla(0deg, 0%, 100%, 81%);
+  border-radius: 5px;
+  width: max-content;
+  font-size: 30px;
+  padding: 3px 15px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateY(-50%) translateX(-50%);
+  backdrop-filter: blur(5px);
+}
+nav.navbar > div.img {
+  position: absolute;
+  right: 110px;
+  top: 45px;
+}
 }
