--- a/html/night_market/night_market.css
+++ b/html/night_market/night_market.css
@@ -1,6 +1,8 @@
 @import url(../navbar.css);
 @import url(../footer.css);
 @import url(../aside.css);
+
+
 *{
   box-sizing: border-box;
   /* outline: 1px solid red; */
@@ -264,4 +266,36 @@ article.food_1_2_1 p.title{
 article.food_1_2_1 p.info{
   width: 445px;
   margin-top: 25px;
+}
+
+/* -------------------------RWD ------------------------*/
+@media screen and (max-width: 575.98px){
+  main{
+    width: 100%;
+  }
+}
+@media (min-width:576px) and (max-width: 767.98px){
+  main,nav.navbar{
+    width: 540px;
+  }
+}
+@media (min-width:768px) and (max-width: 991.98px){
+  main,nav.navbar{
+    width: 720px;
+  }
+}
+@media (min-width:992px) and (max-width: 1199.98px){
+  main,nav.navbar{
+    width: 900px;
+  }
+}
+@media (min-width: 1200px) and (max-width: 1399.98px){
+  ss{
+    width: 1200px;
+  }
+}
+@media (min-width: 1400px){
+  div.my_div1{
+    width: 1320px;
+  }
 }
