--- a/html/aside.css
+++ b/html/aside.css
@@ -199,3 +199,211 @@ ul.travel :hover span::before{
   left: -25px;
   top: 5px;
 } 
+@media (max-width: 320px) {
+
+}
+@media (max-width: 575.98px) {
+  img.x{
+    width: 30px;
+    position: absolute;
+    top: 30px;
+    right: 60px; 
+    cursor: pointer;
+    z-index: 10;
+  }
+  aside.aside{
+    background-color: hsla(193deg, 63%, 88%, 100);
+    width: 100%;
+    height: 100vh;
+    position: fixed;
+    right: 0;
+    top: 0;
+    overflow: hidden;
+    z-index: 8;
+    /* box-shadow: 10px 10px 5px black ; */
+    transform: translateX(110%);
+    transition: transform 1s ease-in-out;
+  }
+  
+  aside.-open{
+    background-color: hsla(193deg, 63%, 88%, 100);
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    right: 0;
+    top: 0;
+    overflow: hidden;
+    z-index: 8;
+    /* box-shadow: -1px 1px 10px lightgrey ; */
+    transform: translateX(0%);
+   
+  }
+  aside > ul{
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    right: 0;
+    top: 0;
+    z-index: 3;
+    overflow: hidden;
+    font-size: 24px;
+    padding-left: 200px;
+    padding-top: 80px;
+    line-height: 80px;
+  }
+  
+  aside > div.background{
+    background-image: url(./logo/logo_2.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 50%;
+    position: absolute;
+    left: -80px;
+    top: 120px;
+    height: 630px;
+    width: 630px;
+    z-index: -1;
+    opacity: .2 ;
+  }
+  div{
+    width: fit-content;
+  }
+  
+  li.a1:hover{
+    transform: translateX(-5px); 
+    transition: all .5s;
+    font-size: 28px;
+    cursor: pointer;
+    
+  
+  }
+  /* --------------主題景點選單------------- */
+  ul.theme{
+    padding-left: 36px;
+    width: fit-content;
+    display: none;
+    font-size: 22px;
+    transform: translateY(-10%);
+    line-height: 80px;
+  }
+  
+  div.theme_block:hover ul.theme{
+    display: block;
+    line-height: 50px;
+    position: relative;
+  }
+  div.theme_block:hover ul.theme::before{
+    display: block;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 80px;
+    height: 80px;
+  }
+  
+  ul.theme > li:hover{
+    transform: translateX(-7px); 
+    transition: all .5s;
+    font-size: 23px;
+    /* text-decoration: underline; */
+  }
+  ul.theme span{
+    position: relative;
+  }
+  ul.theme :hover span::before{
+    content: " ";
+    width: 22px;
+    height: 22px;
+    background-image: url("./logo/icon.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    display: block;
+    left: -25px;
+    top: 5px;
+  }
+  /* --------------小吃選單------------------ */
+  ul.food{
+    padding-left: 30px;
+    width: fit-content;
+    display: none;
+    font-size: 22px;
+    transform: translateY(-20%);
+    line-height: 50px;
+  }
+  
+  div.food_block:hover ul.food{
+    display: block;
+    line-height: 50px;
+  }
+  ul.food > li:hover{
+    transform: translateX(-7px); 
+    transition: all .5s;
+    font-size: 23px;
+    
+  }
+  ul.food span{
+    position: relative;
+  }
+  ul.food :hover span::before{
+    content: " ";
+    width: 22px;
+    height: 22px;
+    background-image: url("./logo/icon.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    display: block;
+    left: -25px;
+    top: 5px;
+  } 
+  /* -----------------行程選單----------- */
+  ul.travel{
+    padding-left: 30px;
+    width: fit-content;
+    display: none;
+    font-size: 22px;
+    transform: translateY(-20%);
+    line-height: 50px;
+  }
+  
+  div.travel_block:hover ul.travel{
+    display: block;
+    transition: display .5s;
+  }
+  
+  ul.travel > li:hover{
+    transform: translateX(-7px); 
+    transition: all .5s;
+    font-size: 23px;
+    /* text-decoration: underline; */
+  }
+  ul.travel span{
+    position: relative;
+  }
+  ul.travel :hover span::before{
+    content: " ";
+    width: 22px;
+    height: 22px;
+    background-image: url("./logo/icon.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    display: block;
+    left: -25px;
+    top: 5px;
+  } 
+}
+@media (min-width:576px) and (max-width: 767.98px){
+ 
+}
+@media (min-width:768px) and (max-width: 991.98px){
+  
+}
+
+@media (min-width:992px) and (max-width: 1199.98px){
+ 
+}
+@media (min-width:768px) and (max-width: 991.98px){
+  
+}
