--- a/html/index/index.css
+++ b/html/index/index.css
@@ -9,7 +9,6 @@
   text-decoration: none;
   color: hsla(0deg, 2%, 33%, 100);
   font-family: "Noto Sans";
-  /* outline: 1px solid red; */
 }
 
 @keyframes scroll {
@@ -287,43 +286,49 @@ article.theme {
   position: relative;
   margin: 0 auto;
   width: 100%;
-  /* min-width: 1200px; */
+  min-width: 1200px;
 }
 article.theme > div.icon {
   margin: 0 auto;
 }
 div.background {
-  margin-top: 40px;
+  margin-top: 55px;
   background-color: hsla(160deg, 52%, 40%, 0.19);
   width: 350px;
-  height: 350px;
+  height: 330px;
   border-radius: 15px;
   position: relative;
-  transform: translateX(-50px);
+  transform: translateX(-100px);
 }
-div.background > a {
+div.control > a {
+  display: block;
+  width: 100px;
   font-size: 24px;
-  position: absolute;
-  left: 200px;
-  bottom: 20px;
+  margin: 0 auto;
 }
 div.block_2 {
   margin: 0 auto;
   width: 1200px;
 }
-div.background > img#left {
+div.control{
+  width: 180px;
+  position: relative;
+  left: 150px;
+  top: 290px;
+}
+div.control > img#left {
   position: absolute;
-  left: 170px;
-  bottom: 23px;
-  width: 20px;
+  left: 7px;
+  bottom: 3px;
+  width: 23px;
   cursor: pointer;
 }
 
-div.background > img#right {
+div.control > img#right {
   position: absolute;
-  left: 303px;
-  bottom: 23px;
-  width: 20px;
+  left: 145px;
+  bottom: 3px;
+  width: 23px;
   cursor: pointer;
 }
 
@@ -395,7 +400,37 @@ div.grid {
 div.grid_item {
   font-size: 0;
   width: fit-content;
-  padding: 20px 15px 20px;
+  padding: 20px 0px 20px;
   z-index: 1;
+  
 }
-
+div.grid_item > a {
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+div.grid_item p{
+  color: white;
+  backdrop-filter: blur(100px); 
+  padding-top: 2px;
+  height: 70px;
+  font-size: 15px;
+  text-align: center;
+  transition: .3s;
+  position: absolute;
+  right: 0;
+  bottom: -70px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+div.grid_item span{
+  color: white;
+  padding: 5px;
+  text-align: left;
+  font-size: 12px;
+  display: block;
+  width: 260px;
+}
+div.grid_item:hover p{
+  transform: translateY(-70px); 
+}
