--- a/html/index/index_rwd.css
+++ b/html/index/index_rwd.css
@@ -1,6 +1,26 @@
 /* img{
   max-width: 100%;
 } */
+@media (max-width: 390px) {
+  div.background {
+    margin-top: 40px;
+    background-color: hsla(160deg, 52%, 40%, 0.19);
+    width: 350px;
+    height: 300px !important;
+    border-radius: 15px;
+    position: relative;
+    left: 0%;
+  }
+  div.control{
+    width: 180px;
+    position: relative;
+    left: 40%;
+    top: 250px !important;
+  }
+  img.rwd{
+    width: 280px;
+  }
+}
 @media (max-width: 575.98px) {
   div img.scroll {
     position: absolute;
@@ -161,7 +181,7 @@
     top: 93%;
     left: 28%;
     display: inline-block;
-    width: 250px;
+    width: 220px;
   }
   div.city {
     position: relative;
@@ -207,6 +227,7 @@
     height: 350px;
     border-radius: 15px;
     position: relative;
+    left: 0%;
     transform: translateX(-50px);
   }
   div.background > a {
@@ -214,6 +235,12 @@
     position: absolute;
     left: 200px;
     bottom: 20px;
+  }
+  div.control{
+    width: 180px;
+    position: relative;
+    left: 40%;
+    top: 300px;
   }
   div.block_2 {
     margin: 0 auto;
@@ -236,10 +263,11 @@
   }
   
   div.images {
-    width: 100%;
+    width: 80%;
     display: inline-flex;
     justify-content: space-between;
     position: absolute;
+    left: 20px;
     top: 130px;
   }
   img.rwd{
@@ -524,18 +552,30 @@
     margin: 0 auto;
     width: 100%;
   }
-  div.background > img#left {
+  div.control{
+    width: 180px;
+    position: relative;
+    left: 20%;
+    top: 210px;
+  }
+  div.control > a {
+    display: block;
+    width: 80px;
+    font-size: 20px;
+    margin: 0 auto;
+  }
+  div.control > img#left {
     position: absolute;
-    left: 30%;
-    bottom: 22px;
+    left: 25px;
+    bottom: 2px;
     width: 20px;
     cursor: pointer;
   }
   
-  div.background > img#right {
+  div.control > img#right {
     position: absolute;
-    left: 80%;
-    bottom: 22px;
+    left: 135px;
+    bottom: 2px;
     width: 20px;
     cursor: pointer;
   }
@@ -557,14 +597,10 @@
     width: 90%;
   }
   .images a:first-child{
-    border: 1xp solid red;
     padding-left: 20px;
-    max-width: 80%;
   }
   .images a:nth-child(2){
-    border: 1xp solid red;
     display: block;
-    width: 50%;
   }
   .images a:nth-child(3){
     display: block;
@@ -617,19 +653,677 @@
     width: 260px;
   }
 }
+/* ------------------小電腦 ------------------------------*/
+ @media (min-width:768px) and (max-width: 991.98px){
+  header{
+    padding-bottom: 55px;
+  }
+  div img.scroll {
+    position: absolute;
+    width: 30px;
+    height: 120px;
+    bottom: 30px;
+    left: 15px;
+    opacity: 1;
+    z-index: 1;
+    animation-name: scroll;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+  main.main div.scroll {
+    background-image: url(./images/banner_2.jpg);
+    background-attachment: inherit;
+    background-repeat: no-repeat;
+    background-position: 0;
+    background-size: 100%;
+    position: relative;
+    min-width: 100%;
+    z-index: 0;
+    margin: 0px 0px 55px 0px;
+  }
+  img.turn {
+    height: 100%;
+    width: 100%;
+    height: 400px;
+  }
 
-/* @media (min-width:768px) and (max-width: 991.98px){
-  div.my_div1{
-    width: 720px;
+  div.slideshow {
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    height: 400px;
+    width: 100%;
+  }
+  header {
+    min-width: 100%;
+    object-fit: contain;
+    padding-bottom: 0;
+  }
+  main.main {
+    min-width: 100%;
+    padding-top: 55px;
+  }
+  article.content_1 {
+    margin: 0 auto;
+    font-size: 0;
+    padding-bottom: 100px;
+    width: 100%;
+    position: relative;
+  }
+  
+  div.text {
+    display: flex;
+    vertical-align: top;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  
+  div.text > p.title {
+    width: fit-content;
+    display: inline-block;
+    font-size: 30px;
+    margin: 0;
+    position: relative;
+    left: 45%;
+    padding-left: 0px;
+    padding-bottom: 45px;
+  }
+  div.text > p.content {
+    font-size: 18px;
+    width: 100%;
+    padding: 0 20px;
+    margin-left: 0;
+  }
+  div.images_1 {
+    padding: 50px 0px 0px 30px;
+    width: 250px;
+    position: relative;
+    left: 35%;
+  }
+  div.rain {
+    width: fit-content;
+  }
+  div.r_0,
+  .r_1,
+  .r_2,
+  .r_3,
+  .r_4,
+  .r_5,
+  .r_6 {
+    position: absolute;
+    top: 80px;
+  }
+  
+  div.r_1,
+  .r_3,
+  .r_5 {
+    animation-name: rain;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+  div.r_2,
+  .r_4,
+  .r_6 {
+    animation-name: rain;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-delay: 0.5s;
+  }
+  img.row {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+  }
+  .flex{
+    width: 100%;
+    display: inline-block;
+    margin: 0 auto;
+    justify-content: space-around;
+  }
+  /* -------------------第二部分內容 -----------------*/
+  article.content_2 {
+    display: flex;
+    flex-direction: column-reverse;
+    margin: 0 auto;
+    font-size: 0;
+    width: 100%;
+    position: relative;
+  }
+  
+  article.content_2 > div.text {
+    width: 100%;
+  }
+  
+  article.content_2 > div.text > p.title {
+    display: inline-block;
+    font-size: 30px;
+    padding: 55px 0 45px 0px;
+  }
+  
+  article.content_2 > div.text > p.content {
+    display: block;
+    width: 100%;
+    font-size: 18px;
+    margin-left: 0px;
+  }
+  
+  div.images_2 {
+   position: relative;
+   left: 40%;
+   top: 40px;
+   width: fit-content;
+   margin-bottom: 80px;
+   
+  }
+  div.city {
+    position: relative;
+    width: fit-content;
+  }
+  /* ----------------開始基隆之旅 ---------------*/
+  article.start {
+    margin: 100px 0px 100px 0px;
+    background-image: url(./images/start.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-width: 100%;
+    height: 200px;
+    position: relative;
+  }
+  article.start > p {
+    border-radius: 5px;
+    font-size: 24px;
+    width: fit-content;
+    color: white;
+    background-color: none;
+    padding: 5px 10px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -40%);
+  }
+  
+  /* ------------------主題景點-------------- */
+  article.theme {
+    position: relative;
+    margin: 0 auto;
+    min-width: 100%;
+  }
+  article.theme > div.icon {
+    transform: scale(0.9);
+    margin: 0 auto;
+  }
+  div.background {
+    margin-top: 40px;
+    background-color: hsla(160deg, 52%, 40%, 0.19);
+    width: 35%;
+    height: 300px;
+    border-radius: 15px;
+    position: relative;
+    transform: translateX(-50px);
+  }
+  div.background > a {
+    font-size: 20px;
+    position: absolute;
+    left: 50%;
+    bottom: 20px;
+  }
+  div.block_2 {
+    margin: 0 auto;
+    width: 100%;
+  }
+  div.control{
+    width: 180px;
+    position: relative;
+    left: 30%;
+    top: 250px;
+  }
+  div.control > a {
+    display: block;
+    width: 80px;
+    font-size: 20px;
+    margin: 0 auto;
+  }
+  div.control > img#left {
+    position: absolute;
+    left: 25px;
+    bottom: 2px;
+    width: 20px;
+    cursor: pointer;
+  }
+  
+  div.control > img#right {
+    position: absolute;
+    left: 135px;
+    bottom: 2px;
+    width: 20px;
+    cursor: pointer;
+  }
+  div.images {
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-evenly;
+    position: absolute;
+    top: 130px;
+  }
+  img.rwd{ 
+    width: 90%;
+  }
+  img.down{
+    width: 90%;
+  }
+  img.last{
+    width: 90%;
+  }
+  .images a:first-child{
+    padding-left: 20px;
+    /* max-width: 80%; */
+  }
+  .images a:nth-child(2){
+    display: block;
+    /* width: 40%; */
+  }
+  .images a:nth-child(3){
+    display: block;
+  }
+  
+  div.banner_3 {
+    margin-top: 100px;
+    min-width: 100%;
+    height: 320px;
+    background-image: url(./images/min_banner_3.png);
+    background-repeat: no-repeat;
+    background-size: 100%;
+  }
+  
+  /* ----------------------------搭人分享 ---------------------*/
+  div.pro {
+    transform: scale(0.9);
+    margin: 0 auto;
+    padding: 80px 0px 40px 0px;
+  }
+  
+  article.proman {
+    border: 1px solid hsla(193deg, 100%, 96%, 100);
+    position: relative;
+  }
+  
+  div.background_2 {
+    display: none;
+  }
+  div.background_3 {
+    display: none;
+  }
+  
+  div.grid {
+    height: 800px;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 100%;
+    padding: 0;
+    margin-bottom: 82px;
+  }
+  div.grid_item img{
+    align-items: center;
+    justify-content: center;
+    font-size: 0;
+    width: 260px;
   }
 }
 @media (min-width:992px) and (max-width: 1199.98px){
-  b{
-    width: 960px;
+  header{
+    padding-bottom: 55px;
   }
+  div img.scroll {
+    position: absolute;
+    width: 30px;
+    height: 120px;
+    bottom: 30px;
+    left: 15px;
+    opacity: 1;
+    z-index: 1;
+    animation-name: scroll;
+    animation-duration: 1.5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+  main.main div.scroll {
+    background-image: url(./images/banner_2.jpg);
+    background-attachment: inherit;
+    background-repeat: no-repeat;
+    background-position: 0;
+    background-size: 100%;
+    position: relative;
+    min-width: 100%;
+    z-index: 0;
+    margin: 0px 0px 55px 0px;
+  }
+  img.turn {
+    height: 100%;
+    width: 100%;
+    height: 400px;
+  }
+
+  div.slideshow {
+    margin: 0 auto;
+    position: relative;
+    overflow: hidden;
+    height: 400px;
+    width: 100%;
+  }
+  header {
+    min-width: 100%;
+    object-fit: contain;
+    padding-bottom: 0;
+  }
+  main.main {
+    min-width: 100%;
+    padding-top: 55px;
+  }
+  article.content_1 {
+    margin: 0 auto;
+    font-size: 0;
+    padding-bottom: 100px;
+    width: 100%;
+    position: relative;
+  }
+  
+  div.text {
+    display: flex;
+    vertical-align: top;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+  
+  div.text > p.title {
+    width: fit-content;
+    display: inline-block;
+    font-size: 30px;
+    margin: 0;
+    position: relative;
+    left: 45%;
+    padding-left: 0px;
+    padding-bottom: 45px;
+  }
+  div.text > p.content {
+    font-size: 18px;
+    width: 100%;
+    padding: 0 20px;
+    margin-left: 0;
+  }
+  div.images_1 {
+    padding: 50px 0px 0px 30px;
+    width: 250px;
+    position: relative;
+    left: 35%;
+  }
+  div.rain {
+    width: fit-content;
+  }
+  div.r_0,
+  .r_1,
+  .r_2,
+  .r_3,
+  .r_4,
+  .r_5,
+  .r_6 {
+    position: absolute;
+    top: 80px;
+  }
+  
+  div.r_1,
+  .r_3,
+  .r_5 {
+    animation-name: rain;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+  div.r_2,
+  .r_4,
+  .r_6 {
+    animation-name: rain;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+    animation-delay: 0.5s;
+  }
+  img.row {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+  }
+  .flex{
+    width: 100%;
+    display: inline-block;
+    margin: 0 auto;
+    justify-content: space-around;
+  }
+  /* -------------------第二部分內容 -----------------*/
+  article.content_2 {
+    display: flex;
+    flex-direction: column-reverse;
+    margin: 0 auto;
+    font-size: 0;
+    width: 100%;
+    position: relative;
+  }
+  
+  article.content_2 > div.text {
+    width: 100%;
+  }
+  
+  article.content_2 > div.text > p.title {
+    display: inline-block;
+    font-size: 30px;
+    padding: 55px 0 45px 0px;
+  }
+  
+  article.content_2 > div.text > p.content {
+    display: block;
+    width: 100%;
+    font-size: 18px;
+    margin-left: 0px;
+  }
+  
+  div.images_2 {
+   position: relative;
+   left: 40%;
+   top: 40px;
+   width: fit-content;
+   margin-bottom: 80px;
+   
+  }
+  div.city {
+    position: relative;
+    width: fit-content;
+  }
+  /* ----------------開始基隆之旅 ---------------*/
+  article.start {
+    margin: 100px 0px 100px 0px;
+    background-image: url(./images/start.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    min-width: 100%;
+    height: 200px;
+    position: relative;
+  }
+  article.start > p {
+    border-radius: 5px;
+    font-size: 24px;
+    width: fit-content;
+    color: white;
+    background-color: none;
+    padding: 5px 10px;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -40%);
+  }
+  
+  /* ------------------主題景點-------------- */
+  article.theme {
+    position: relative;
+    margin: 0 auto;
+    min-width: 900px;
+  }
+  article.theme > div.icon {
+    margin: 0 auto;
+  }
+  div.background {
+    margin-top: 40px;
+    background-color: hsla(160deg, 52%, 40%, 0.19);
+    width: 350px;
+    height: 350px;
+    border-radius: 15px;
+    position: relative;
+    transform: translateX(-50px);
+  }
+  div.control > a {
+    display: block;
+    width: 100px;
+    font-size: 24px;
+    margin: 0 auto;
+  }
+  div.block_2 {
+    margin: 0 auto;
+    width: 100%;
+  }
+  div.control{
+    width: 180px;
+    position: relative;
+    left: 150px;
+    top: 300px;
+  }
+  div.control > img#left {
+    position: absolute;
+    left: 7px;
+    bottom: 3px;
+    width: 23px;
+    cursor: pointer;
+  }
+  
+  div.control > img#right {
+    position: absolute;
+    left: 145px;
+    bottom: 3px;
+    width: 23px;
+    cursor: pointer;
+  }
+  
+  div.images {
+    width: 100%;
+    max-width: 1200px;
+    display: inline-flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 130px;
+  }
+  div.images {
+    width: 100%;
+    display: inline-flex;
+    justify-content: space-evenly;
+    position: absolute;
+    top: 130px;
+  }
+  img.rwd{ 
+    width: 90%;
+  }
+  img.down{
+    width: 90%;
+  }
+  img.last{
+    width: 90%;
+  }
+  div.images img.down {
+    transform: translateY(70px);
+  }
+  
+  div.banner_3 {
+    margin-top: 100px;
+    width: 100%;
+    min-width: 100%;
+    height: 320px;
+    background-image: url(./images/banner_3.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  
+  /* ----------------------------搭人分享 ---------------------*/
+  div.pro {
+    transform: scale(0.9);
+    margin: 0 auto;
+    padding: 80px 0px 40px 0px;
+  }
+  
+  article.proman {
+    border: 1px solid hsla(193deg, 100%, 96%, 100);
+    position: relative;
+  }
+  
+  div.background_2 {
+    display: none;
+  }
+  div.background_3 {
+    display: none;
+  }
+  
+div.grid {
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: auto auto auto;
+  width: 960px;
+  padding: 20px 15px 20px;
+  margin-bottom: 82px;
+  z-index: 1;
+}
+div.grid_item {
+  font-size: 0;
+  width: fit-content;
+  padding: 20px 0px 20px;
+  z-index: 1;
+  
+}
+div.grid_item > a {
+  display: block;
+  position: relative;
+  overflow: hidden;
+}
+div.grid_item p{
+  color: white;
+  backdrop-filter: blur(100px); 
+  padding-top: 2px;
+  height: 70px;
+  font-size: 15px;
+  text-align: center;
+  transition: .3s;
+  position: absolute;
+  right: 0;
+  bottom: -70px;
+  border-bottom-left-radius: 15px;
+  border-bottom-right-radius: 15px;
+}
+div.grid_item span{
+  color: white;
+  padding: 5px;
+  text-align: left;
+  font-size: 12px;
+  display: block;
+  width: 260px;
+}
+div.grid_item:hover p{
+  transform: translateY(-70px); 
+}
+
 }
 @media (min-width: 1200px) and (max-width: 1399.98px){
   div.my_div1{
     width: 100%;
   }
-}  */
+}   
