--- a/html/mountain/mountain.css
+++ b/html/mountain/mountain.css
@@ -88,6 +88,7 @@ div.valley > div.valley_play{
   border-radius: 15px;
   width: 530px;
   height: 355px;
+  flex-basis: 530px;
   position: absolute;
   top: 45px;
   left: 0;
