--- a/html/navbar.css
+++ b/html/navbar.css
@@ -93,7 +93,20 @@ div.banner > p {
     right: -50px;
     top: -10px;
   }
+  div.banner > p {
+    color: hsla(0deg, 0%, 100%, 81%);
+    border-radius: 5px;
+    width: max-content;
+    font-size: 24px;
+    padding: 3px 15px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translateY(-50%) translateX(-50%);
+    backdrop-filter: blur(5px);
+  }
 }
+
 @media (min-width:576px) and (max-width: 767.98px){
   nav.navbar {
     min-width: 100%;
