--- a/html/mountain/mountain_play.css
+++ b/html/mountain/mountain_play.css
@@ -23,7 +23,30 @@
   border-radius: 15px;
   transition: .5s transform ease-in-out;
 }
-
+@media screen and (max-width: 575.98px){
+  .valley_play ul.slides {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    list-style: none;
+    margin: 0 auto;
+    padding: 0;
+  }
+  .valley_play li.slide {
+    margin: 0 auto;
+    padding: 0;
+    width: inherit;
+    height: inherit;
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 15px;
+    transition: .5s transform ease-in-out;
+  }
+}
 .valley_play .slide:nth-of-type(1) {
   background-image: url("./images/valley/valley_5.jpeg");
   background-size: cover;
